--- a/assets/css/style-ac.css
+++ b/assets/css/style-ac.css
@@ -80,3 +80,8 @@ body.dark-mode .container {
   border: none !important;
   box-shadow: none !important;
 }
+
+body {
+  transition: background-color 0.4s ease, color 0.4s ease;
+}
+
