--- a/assets/css/style-ac.css
+++ b/assets/css/style-ac.css
@@ -118,7 +118,7 @@ body.dark-mode .navbar-wrapper,
 body.dark-mode header,
 body.dark-mode section.menu,
 body.dark-mode .navbar-dropdown .dropdown-menu {
-  background-color: #323533 !important;
+  background-color: #2a2c2e !important;
   color: #d6d6d6 !important;
   border: none !important;
   box-shadow: none !important;
