--- a/assets/css/style-ac.css
+++ b/assets/css/style-ac.css
@@ -233,18 +233,23 @@ section,
   body.dark-mode {
     font-size: 18px;
     line-height: 1.6;
+    overflow-x: hidden;
   }
 
   body.dark-mode section,
   body.dark-mode .mbr-section {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
+    padding-top: 2.5rem !important;
+    padding-bottom: 2.5rem !important;
+    padding-left: 1rem !important;
+    padding-right: 1rem !important;
+    max-width: 600px;
+    margin: 0 auto;
   }
 
   body.dark-mode .container,
-  body.dark-mode .mbr-section {
-    padding-left: 1rem;
-    padding-right: 1rem;
+  body.dark-mode .container-fluid,
+  body.dark-mode .row {
+    overflow-x: hidden !important;
   }
 
   body.dark-mode .image-wrapper {
@@ -275,18 +280,23 @@ section,
   :not(.dark-mode) body {
     font-size: 18px;
     line-height: 1.6;
+    overflow-x: hidden;
   }
 
   :not(.dark-mode) section,
   :not(.dark-mode) .mbr-section {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
+    padding-top: 2.5rem !important;
+    padding-bottom: 2.5rem !important;
+    padding-left: 1rem !important;
+    padding-right: 1rem !important;
+    max-width: 600px;
+    margin: 0 auto;
   }
 
   :not(.dark-mode) .container,
-  :not(.dark-mode) .mbr-section {
-    padding-left: 1rem;
-    padding-right: 1rem;
+  :not(.dark-mode) .container-fluid,
+  :not(.dark-mode) .row {
+    overflow-x: hidden !important;
   }
 
   :not(.dark-mode) .image-wrapper {
@@ -311,6 +321,7 @@ section,
     text-align: center;
   }
 }
+
 
 
 
